tests/fixtures/invalid/bytes_div_bytes.py
# Cannot divide Bytes and Bytes
x: float = b"hello" / b"hello"
